Update DNS record value in Settings.json

--- a/Settings.json
+++ b/Settings.json
@@ -73,7 +73,7 @@
                 {
                     "Name": "",
                     "Type": "MX",
-                    "Value": "clientconfig.microsoftonline-p.net"
+                    "Value": "lab62658276-godeploylabs-com.mail.protection.outlook.com"
                 }
             ]
         }
